# overlap-toolkit

./: .gitignore  CMakeLists.txt  README.md
data/: atomtypes.json  cutoffs.json
src/: Atom.cpp  Atom.h  Mol2Read.cpp  Mol2Read.h  Point.cpp  Point.h  json.cpp  json.h  o-lap.cpp
